Revert "Revert to template"
This reverts commit b89ba476d663cce3786022296bee5643127ab3c5